# SealVault

./: .gitignore  AGENTS.md  AI_README.md  LICENSE  README.md
.github/workflows/: rust-engine-ci.yml
assets/: text.txt.svlt
docs/: stream_format_specification.md
engine/: Cargo.toml
engine/src/: decrypt.rs  encrypt.rs  error.rs  folder.rs  lib.rs  main.rs
engine/src/algorithm/: mod.rs
engine/src/algorithms/: aes_256_gcm.rs  mod.rs  xchacha20_poly1305.rs
engine/src/crypto/: aead.rs  kdf.rs  mod.rs
engine/src/format/: header.rs  mod.rs  stream.rs
engine/src/fs/: atomic.rs
engine/src/tests/: encryption_roundtrip.rs  two_algorithms.rs
engine/tests/: encryption_roundtrip.rs  folder_roundtrip.rs  two_algorithms.rs
shell/: CMakeLists.txt  README.md
shell/src/: engine_bridge.cpp  engine_bridge.hpp  main.cpp  registry_menu.cpp  registry_menu.hpp  windows_utils.cpp  windows_utils.hpp
