[package]
name = "engine"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

aes-gcm = "0.10"          # AES-256-GCM
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = "1.7"

clap = { version = "4.5", features = ["derive"] }
rpassword = "7.3"

[dev-dependencies]
tempfile = "3.10"
